--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Portfolio Template</h3>
+              <h3>Science</h3>
               <p>
-                A free Open Source Portfolio for anyone to use for free.
+                *something to do with science*
               </p>
               <ul class="work__list">
-                <li>HTML</li>
-                <li>SCSS</li>
-                <li>JavaScript</li>
-                <li>Parcel</li>
+                <li>chemistry</li>
+                <li>electricity</li>
+                <li>biology</li>
+                <li>astronomy</li>
               </ul>
 
               <div class="work__links">
@@ -99,7 +99,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-1.png" class="work__image" alt="Project 1" />
+              <img src="https://scontent.fykz1-1.fna.fbcdn.net/v/t1.6435-9/53084630_2584839171588524_3286389123836805120_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=e3f864&_nc_ohc=vnQUrmWP5aQAX9mjg-m&_nc_ht=scontent.fykz1-1.fna&oh=f924776b04c880b54453a7cce43b2511&oe=61ACE9B9" class="work__image" alt="Project 1" />
             </div>
           </div>
 
