--- a/index.html
+++ b/index.html
@@ -105,16 +105,15 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Calculator</h3>
+              <h3>Math</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                1234567890+-*/=
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li>Fractions</li>
+                <li>Decimals</li>
+                <li>Percentages</li>
+                <li>Equations</li>
               </ul>
 
               <div class="work__links">
@@ -127,7 +126,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-2.png" class="work__image" alt="Project 1" />
+              <img src="https://t4.ftcdn.net/jpg/02/38/56/47/240_F_238564757_L7gsykjvZe2Sdtnyfa0mHd0fObHU4f5G.jpg" class="work__image" alt="Project 1" />
             </div>
           </div>
 
