--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Family Sttudies</h3>
+              <h3>Family Studies</h3>
               <p>
                 *random information*
               </p>
@@ -181,7 +181,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/worlde 3.png" class="work__image" alt="Project 4" />
+              <img src="./images/wordle3.png" class="work__image" alt="Project 4" />
             </div>
           </div>
 
