--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </h1>
         <!-- Put a small paragraph about yourself -->
         <p>qwertyuiopaSDFGHJKLZXCVBNM</p>
-        <a href="#contact" class="btn btn--pink">Get in touch</a>
+        <a href="second/second.html" class="btn btn--pink">Second page</a>
       </div>
     </div>
   </header>
@@ -193,11 +193,11 @@
 
     <!-- ***** Clients ***** -->
 
-    <section class="client" id="clients">
+    <!-- <section class="client" id="clients">
       <div class="row">
         <h2>Clients</h2>
         <div class="client__logos">
-          <!-- Add logos of the clients or companies you'have worked with. -->
+        Add logos of the clients or companies you'have worked with.
           <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
           <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
           <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
@@ -206,7 +206,7 @@
           <img src="./images/chippy.png" class="client__logo" alt="Company 1" />
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- ***** About ***** -->
 
